fix width of athlete-selection on mobile (boulder-)measurement

--- a/templates/mobile/app.less
+++ b/templates/mobile/app.less
@@ -139,7 +139,7 @@
 			font-size: 120%;
 		}
 		#ranking-result-index_nm\[PerId\] {
-			max-width: ~"calc(100% - 500px)" !important;
+			max-width: ~"calc(100% - 40px)" !important;
 		}
 		.et2_hbox.et2_box_widget.topoHeader > #ranking-result-index_button\[next\] {
 			background-image: none !important;
